RESOLVED FIXED237659
[iOS] Netflix.com fails to resume after moving app to background during playback
https://bugs.webkit.org/show_bug.cgi?id=237659
Summary [iOS] Netflix.com fails to resume after moving app to background during playback
Jer Noble
Reported 2022-03-09 08:40:06 PST
[iOS] Netflix.com fails to resume after moving app to background during playback
Attachments
Patch (6.58 KB, patch)
2022-03-09 09:51 PST, Jer Noble
no flags
Patch for landing (6.78 KB, patch)
2022-03-09 13:03 PST, Jer Noble
no flags
Jer Noble
Comment 1 2022-03-09 08:40:37 PST
Jer Noble
Comment 2 2022-03-09 09:51:13 PST
Jer Noble
Comment 3 2022-03-09 13:03:00 PST
Created attachment 454278 [details] Patch for landing
EWS
Comment 4 2022-03-10 10:24:00 PST
Committed r291118 (248280@main): <https://commits.webkit.org/248280@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 454278 [details].
Note You need to log in before you can comment on or make changes to this bug.